Added column-defs endpoint. DAT-3283
