# api_server/openapi_server/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.column_defs import ColumnDefs
 from openapi_server.models.employee import Employee
 from openapi_server.models.employee_to_add import EmployeeToAdd
 from openapi_server.models.employees import Employees
