# api_server/openapi_server/models/column_defs.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class ColumnDefs(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, title=None, type=None):  # noqa: E501
+        """ColumnDefs - a model defined in OpenAPI
+
+        :param title: The title of this ColumnDefs.  # noqa: E501
+        :type title: str
+        :param type: The type of this ColumnDefs.  # noqa: E501
+        :type type: str
+        """
+        self.openapi_types = {
+            'title': str,
+            'type': str
+        }
+
+        self.attribute_map = {
+            'title': 'title',
+            'type': 'type'
+        }
+
+        self._title = title
+        self._type = type
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ColumnDefs':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ColumnDefs of this ColumnDefs.  # noqa: E501
+        :rtype: ColumnDefs
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def title(self):
+        """Gets the title of this ColumnDefs.
+
+
+        :return: The title of this ColumnDefs.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title):
+        """Sets the title of this ColumnDefs.
+
+
+        :param title: The title of this ColumnDefs.
+        :type title: str
+        """
+
+        self._title = title
+
+    @property
+    def type(self):
+        """Gets the type of this ColumnDefs.
+
+
+        :return: The type of this ColumnDefs.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type):
+        """Sets the type of this ColumnDefs.
+
+
+        :param type: The type of this ColumnDefs.
+        :type type: str
+        """
+
+        self._type = type
